BARC UAT/src/objects/Kitting_Product__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Product</label>
        <referenceTo>Inventory_Product__c</referenceTo>
        <relationshipLabel>Kitting Products</relationshipLabel>
        <relationshipName>Kitting_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kitting__c</fullName>
        <label>Kitting</label>
        <referenceTo>Kitting__c</referenceTo>
        <relationshipLabel>Kitting Products</relationshipLabel>
        <relationshipName>Kitting_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Kitting Products</relationshipLabel>
        <relationshipName>Kitting_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Kitting Products</relationshipLabel>
        <relationshipName>Kitting_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Kitting Product</label>
    <nameField>
        <displayFormat>KP-{0}</displayFormat>
        <label>Kitting Product No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kitting Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>